test/cases/good/extra010.lat
int main() {
    int x = -9223372036854775808, y = 9223372036854775807;
    printInt(x + y);

    x = 9223372036854775807; y = 9223372036854775807;
    printInt(x / y);

    x = -9223372036854775808; y = -9223372036854775808;
    printInt(x / y);

    x = -9223372036854775807; y = 9223372036854775807;
    printInt(x / y);

    x = 9223372036854775807; y = 9223372036854775807;
    printInt(x % y);

    x = 9223372036854775807; y = 9223372036854775806;
    printInt(x % y);

    return 0;
}