test/cases/bad/bad058.lat
// Unknown class

int main() {
    bool x;
    return 0;
}